--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.mail.username=2849213279@qq.com
+spring.mail.password=727447170
+spring.mail.host=smtp.qq.com
 
+spring.mail.properties.mail.smtl.sll.enble=true
